[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/main.gd" type="Script" id=1]
[ext_resource path="res://fonts/CrimsonText-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://images/spr.png" type="Texture" id=3]
[ext_resource path="res://images/download.png" type="Texture" id=4]
[ext_resource path="res://images/life_progress.png" type="Texture" id=5]
[ext_resource path="res://images/int.png" type="Texture" id=6]
[ext_resource path="res://images/life_bottom.png" type="Texture" id=7]
[ext_resource path="res://images/life_over.png" type="Texture" id=8]
[ext_resource path="res://images/d20.png" type="Texture" id=9]
[ext_resource path="res://images/saiyansuit.png" type="Texture" id=10]
[ext_resource path="res://images/DEX.png" type="Texture" id=11]
[ext_resource path="res://images/blank.png" type="Texture" id=12]
[ext_resource path="res://images/scouter.png" type="Texture" id=13]
[ext_resource path="res://images/ki_progress.png" type="Texture" id=14]
[ext_resource path="res://resources/def_mode_0.tres" type="ButtonGroup" id=15]
[ext_resource path="res://resources/die_mode_0.tres" type="ButtonGroup" id=16]
[ext_resource path="res://resources/die_mode_1.tres" type="ButtonGroup" id=17]
[ext_resource path="res://resources/def_mode_1.tres" type="ButtonGroup" id=18]

[sub_resource type="DynamicFont" id=4]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="life_under_1" type="Sprite" parent="."]
position = Vector2( 216, 39.125 )
scale = Vector2( 1.04, 1.245 )
texture = ExtResource( 8 )

[node name="ki_under_1" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 216, 101.5 )
scale = Vector2( 0.92, 1.06 )
texture = ExtResource( 7 )

[node name="life_bar_0" type="TextureProgress" parent="."]
margin_left = 16.0
margin_top = 14.25
margin_right = 416.0
margin_bottom = 64.25
step = 0.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 5 )

[node name="life_under_2" type="Sprite" parent="."]
position = Vector2( 808, 39.125 )
scale = Vector2( 1.04, 1.245 )
texture = ExtResource( 8 )

[node name="life_bar_1" type="TextureProgress" parent="."]
margin_left = 608.0
margin_top = 15.125
margin_right = 1008.0
margin_bottom = 65.125
step = 0.0
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 5 )

[node name="ki_bar_0" type="TextureProgress" parent="."]
margin_left = 40.0
margin_top = 80.0
margin_right = 390.0
margin_bottom = 120.0
value = 100.0
texture_progress = ExtResource( 14 )
tint_over = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0, 0.223529, 0.709804, 1 )

[node name="ki_0" type="RichTextLabel" parent="."]
margin_left = 40.0
margin_top = 80.0
margin_right = 392.0
margin_bottom = 136.0
custom_fonts/normal_font = SubResource( 4 )
text = "Ki:?/?"

[node name="ki_under_2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 816, 101.5 )
scale = Vector2( 0.92, 1.06 )
texture = ExtResource( 7 )

[node name="ki_bar_1" type="TextureProgress" parent="."]
margin_left = 640.0
margin_top = 80.0
margin_right = 990.0
margin_bottom = 120.0
value = 100.0
texture_progress = ExtResource( 14 )
tint_over = Color( 0.164706, 0.164706, 0.164706, 1 )
tint_progress = Color( 0, 0.223529, 0.709804, 1 )

[node name="ki_1" type="RichTextLabel" parent="."]
margin_left = 640.0
margin_top = 80.0
margin_right = 992.0
margin_bottom = 136.0
custom_fonts/normal_font = SubResource( 4 )
text = "Ki:?/?"

[node name="confirm_1" type="Button" parent="."]
margin_left = 16.0
margin_top = 168.0
margin_right = 280.0
margin_bottom = 188.0
text = "ESCOLHER FICHA 1"

[node name="ficha_box_0" type="OptionButton" parent="."]
margin_left = 16.0
margin_top = 144.0
margin_right = 280.0
margin_bottom = 164.0

[node name="ficha_box_1" type="OptionButton" parent="."]
margin_left = 744.0
margin_top = 136.0
margin_right = 1008.0
margin_bottom = 156.0

[node name="life_0" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 416.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( -512, 40 )
custom_fonts/normal_font = SubResource( 2 )
text = "Vida:?/?"

[node name="life_1" type="RichTextLabel" parent="."]
margin_left = 608.0
margin_top = 16.0
margin_right = 1008.0
margin_bottom = 75.0
rect_pivot_offset = Vector2( -512, 40 )
custom_fonts/normal_font = SubResource( 2 )
text = "Vida:?/?"

[node name="confirm_2" type="Button" parent="."]
margin_left = 744.0
margin_top = 164.0
margin_right = 1008.0
margin_bottom = 184.0
text = "ESCOLHER FICHA 2"

[node name="main_panel" type="Panel" parent="."]
margin_left = 320.0
margin_top = 136.0
margin_right = 696.0
margin_bottom = 584.0

[node name="Panel" type="Panel" parent="main_panel"]
modulate = Color( 0.298039, 0.298039, 0.298039, 1 )
margin_left = 16.0
margin_top = 280.0
margin_right = 360.0
margin_bottom = 400.0

[node name="D20" type="Sprite" parent="main_panel"]
position = Vector2( -480, 96 )
scale = Vector2( 0.19611, 0.196667 )
texture = ExtResource( 9 )
offset = Vector2( 2817.39, 122.034 )

[node name="D21" type="Sprite" parent="main_panel"]
position = Vector2( 312, 123 )
scale = Vector2( 0.178889, 0.196667 )
texture = ExtResource( 9 )

[node name="roll_0" type="RichTextLabel" parent="main_panel"]
margin_left = 8.0
margin_top = 152.0
margin_right = 128.0
margin_bottom = 240.0

[node name="roll_1" type="RichTextLabel" parent="main_panel"]
margin_left = 304.0
margin_top = 160.0
margin_right = 424.0
margin_bottom = 248.0

[node name="result" type="RichTextLabel" parent="main_panel"]
margin_left = 32.0
margin_top = 288.0
margin_right = 352.0
margin_bottom = 432.0

[node name="formula" type="RichTextLabel" parent="main_panel"]
margin_left = 8.0
margin_top = 400.0
margin_right = 432.0
margin_bottom = 440.0

[node name="bloqueio_text" type="Label" parent="main_panel"]
margin_right = 40.0
margin_bottom = 14.0

[node name="panel_1" type="Panel" parent="."]
margin_left = 16.0
margin_top = 200.0
margin_right = 272.0
margin_bottom = 584.0

[node name="skill_box_0" type="OptionButton" parent="panel_1"]
margin_left = 8.0
margin_top = 272.0
margin_right = 112.0
margin_bottom = 292.0

[node name="transformation_box_0" type="OptionButton" parent="panel_1"]
margin_left = 144.0
margin_top = 272.0
margin_right = 248.0
margin_bottom = 292.0

[node name="icon_anchor" type="Sprite" parent="panel_1"]
position = Vector2( -8, -144 )
__meta__ = {
"_edit_group_": true
}

[node name="power_level_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 376.0
margin_right = 264.0
margin_bottom = 408.0
custom_fonts/normal_font = SubResource( 3 )
text = "PDL:?"

[node name="Blank" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 35.5, 271.5 )
scale = Vector2( 0.5, 0.66 )
texture = ExtResource( 12 )

[node name="for_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 192.0
margin_right = 256.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 1 )
text = "FOR:?"

[node name="des_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 224.0
margin_right = 264.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 1 )
text = "DES:?"

[node name="res_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 264.0
margin_right = 264.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 1 )
text = "RES:?"

[node name="int_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 304.0
margin_right = 264.0
margin_bottom = 336.0
custom_fonts/normal_font = SubResource( 1 )
text = "INT:?"

[node name="esp_text_0" type="RichTextLabel" parent="panel_1/icon_anchor"]
margin_left = 56.0
margin_top = 344.0
margin_right = 264.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 1 )
text = "ESP:?"

[node name="for_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 35.9375, 191.938 )
scale = Vector2( 0.107222, 0.142778 )
texture = ExtResource( 4 )

[node name="des_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 232 )
scale = Vector2( 0.0795082, 0.193939 )
texture = ExtResource( 11 )

[node name="res_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 272 )
scale = Vector2( 0.015, 0.02 )
texture = ExtResource( 10 )

[node name="int_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 312 )
scale = Vector2( 0.107778, 0.142222 )
texture = ExtResource( 6 )

[node name="Scouter" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 392 )
scale = Vector2( 0.027907, 0.0471567 )
texture = ExtResource( 13 )

[node name="spr_icon" type="Sprite" parent="panel_1/icon_anchor"]
position = Vector2( 36, 352 )
scale = Vector2( 0.106667, 0.142222 )
texture = ExtResource( 3 )

[node name="atacar_0" type="Button" parent="panel_1"]
visible = false
margin_left = 304.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 33.0
text = "ATACAR"

[node name="nome_0" type="RichTextLabel" parent="panel_1"]
margin_right = 256.0
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 5 )

[node name="desvio_0" type="CheckBox" parent="panel_1"]
margin_top = 336.0
margin_right = 128.0
margin_bottom = 360.0
pressed = true
group = ExtResource( 15 )
text = "Desviar"

[node name="bloqueio_0" type="CheckBox" parent="panel_1"]
margin_top = 360.0
margin_right = 128.0
margin_bottom = 384.0
group = ExtResource( 15 )
text = "Bloquear"

[node name="desvantagem_0" type="CheckBox" parent="panel_1"]
margin_left = 144.0
margin_top = 360.0
margin_right = 256.0
margin_bottom = 384.0
group = ExtResource( 16 )
text = "Desvantagem"

[node name="vantagem_0" type="CheckBox" parent="panel_1"]
margin_left = 144.0
margin_top = 336.0
margin_right = 256.0
margin_bottom = 360.0
group = ExtResource( 16 )
text = "Vantagem"

[node name="neutro_0" type="CheckBox" parent="panel_1"]
margin_left = 144.0
margin_top = 312.0
margin_right = 256.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( -256, -32 )
pressed = true
group = ExtResource( 16 )
text = "Neutro"

[node name="panel_2" type="Panel" parent="."]
margin_left = 752.0
margin_top = 200.0
margin_right = 1008.0
margin_bottom = 584.0

[node name="skill_box_1" type="OptionButton" parent="panel_2"]
margin_left = 8.0
margin_top = 268.0
margin_right = 112.0
margin_bottom = 288.0

[node name="transformation_box_1" type="OptionButton" parent="panel_2"]
margin_left = 144.0
margin_top = 268.0
margin_right = 246.0
margin_bottom = 288.0

[node name="icon_anchor" type="Sprite" parent="panel_2"]
position = Vector2( -8, -149 )
__meta__ = {
"_edit_group_": true
}

[node name="power_level_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 376.0
margin_right = 272.0
margin_bottom = 408.0
custom_fonts/normal_font = SubResource( 3 )
text = "PDL:?"

[node name="Blank" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 35.5, 271.5 )
scale = Vector2( 0.5, 0.66 )
texture = ExtResource( 12 )

[node name="for_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 192.0
margin_right = 272.0
margin_bottom = 224.0
custom_fonts/normal_font = SubResource( 1 )
text = "FOR:?"

[node name="des_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 224.0
margin_right = 272.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 1 )
text = "DES:?"

[node name="res_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 264.0
margin_right = 272.0
margin_bottom = 296.0
custom_fonts/normal_font = SubResource( 1 )
text = "RES:?"

[node name="int_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 304.0
margin_right = 272.0
margin_bottom = 336.0
custom_fonts/normal_font = SubResource( 1 )
text = "INT:?"

[node name="esp_text_1" type="RichTextLabel" parent="panel_2/icon_anchor"]
margin_left = 56.0
margin_top = 344.0
margin_right = 272.0
margin_bottom = 384.0
custom_fonts/normal_font = SubResource( 1 )
text = "ESP:?"

[node name="for_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 35.9375, 191.938 )
scale = Vector2( 0.107222, 0.142778 )
texture = ExtResource( 4 )

[node name="des_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 232 )
scale = Vector2( 0.0795082, 0.193939 )
texture = ExtResource( 11 )

[node name="res_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 272 )
scale = Vector2( 0.015, 0.02 )
texture = ExtResource( 10 )

[node name="int_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 312 )
scale = Vector2( 0.107778, 0.142222 )
texture = ExtResource( 6 )

[node name="Scouter" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 392 )
scale = Vector2( 0.027907, 0.0471567 )
texture = ExtResource( 13 )

[node name="spr_icon" type="Sprite" parent="panel_2/icon_anchor"]
position = Vector2( 36, 352 )
scale = Vector2( 0.106667, 0.142222 )
texture = ExtResource( 3 )

[node name="atacar_1" type="Button" parent="panel_2"]
visible = false
margin_left = -144.0
margin_top = 8.0
margin_right = -40.0
margin_bottom = 33.0
text = "ATACAR"

[node name="nome_1" type="RichTextLabel" parent="panel_2"]
margin_right = 256.0
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 6 )
text = "
"

[node name="desvio_1" type="CheckBox" parent="panel_2"]
margin_top = 336.0
margin_right = 128.0
margin_bottom = 360.0
pressed = true
group = ExtResource( 18 )
text = "Desviar"

[node name="bloqueio_1" type="CheckBox" parent="panel_2"]
margin_top = 360.0
margin_right = 128.0
margin_bottom = 384.0
group = ExtResource( 18 )
text = "Bloquear"

[node name="desvantagem_1" type="CheckBox" parent="panel_2"]
margin_left = 144.0
margin_top = 360.0
margin_right = 256.0
margin_bottom = 384.0
group = ExtResource( 17 )
text = "Desvantagem"

[node name="vantagem_1" type="CheckBox" parent="panel_2"]
margin_left = 144.0
margin_top = 336.0
margin_right = 256.0
margin_bottom = 360.0
group = ExtResource( 17 )
text = "Vantagem"

[node name="neutro_1" type="CheckBox" parent="panel_2"]
margin_left = 144.0
margin_top = 312.0
margin_right = 256.0
margin_bottom = 336.0
rect_pivot_offset = Vector2( -256, -32 )
pressed = true
group = ExtResource( 17 )
text = "Neutro"

[node name="reset_0" type="Button" parent="."]
visible = false
margin_left = 304.0
margin_top = 144.0
margin_right = 416.0
margin_bottom = 168.0
text = "RESET VIDA E KI"

[node name="reset_1" type="Button" parent="."]
visible = false
margin_left = 608.0
margin_top = 144.0
margin_right = 720.0
margin_bottom = 168.0
text = "RESET VIDA E KI"

[node name="scan_folder" type="Button" parent="."]
margin_left = 448.0
margin_top = 96.0
margin_right = 582.0
margin_bottom = 120.0
text = "ATUALIZAR FICHAS"

[node name="life_change_0" type="TextureButton" parent="."]
visible = false
margin_left = 8.0
margin_top = 8.0
margin_right = 424.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( -224, 168 )

[node name="life_change_1" type="TextureButton" parent="."]
visible = false
margin_left = 600.0
margin_top = 8.0
margin_right = 1016.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( -224, 168 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
margin_left = 432.0
margin_top = 32.0
margin_right = 588.0
margin_bottom = 112.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Quanto de vida?"

[node name="LineEdit" type="LineEdit" parent="ConfirmationDialog"]
margin_left = 8.0
margin_top = 8.0
margin_right = 148.0
margin_bottom = 44.0

[node name="box_position" type="Position2D" parent="."]
position = Vector2( 434, 24 )

[connection signal="pressed" from="confirm_1" to="." method="_on_confirm_1_pressed"]
[connection signal="item_selected" from="ficha_box_0" to="." method="_on_ficha_box_1_item_selected"]
[connection signal="item_selected" from="ficha_box_1" to="." method="_on_ficha_box_2_item_selected"]
[connection signal="pressed" from="confirm_2" to="." method="_on_confirm_2_pressed"]
[connection signal="item_selected" from="panel_1/skill_box_0" to="." method="_on_skill_box_1_item_selected"]
[connection signal="item_selected" from="panel_1/transformation_box_0" to="." method="_on_transformation_box_1_item_selected"]
[connection signal="pressed" from="panel_1/atacar_0" to="." method="_on_atacar_0_pressed"]
[connection signal="item_selected" from="panel_2/skill_box_1" to="." method="_on_skill_box_2_item_selected"]
[connection signal="item_selected" from="panel_2/transformation_box_1" to="." method="_on_transformation_box_2_item_selected"]
[connection signal="pressed" from="panel_2/atacar_1" to="." method="_on_atacar_1_pressed"]
[connection signal="pressed" from="reset_0" to="." method="_on_reset_1_pressed"]
[connection signal="pressed" from="reset_1" to="." method="_on_reset_2_pressed"]
[connection signal="pressed" from="scan_folder" to="." method="_on_scan_folder_pressed"]
[connection signal="pressed" from="life_change_0" to="." method="_on_life_change_1_pressed"]
[connection signal="pressed" from="life_change_1" to="." method="_on_life_change_2_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_1_confirmed"]
